--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,5 @@ Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+.idea/.idea.GB_MP_p02/.idea/.name
+.idea/.idea.GB_MP_p02/.idea/vcs.xml
