--- a/GB_MP_p02.uproject
+++ b/GB_MP_p02.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "4.26",
+	"EngineAssociation": "{FE21CB3D-44C7-08D0-B366-4392CCDFE4EA}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
